--- a/Css/styles.css
+++ b/Css/styles.css
@@ -7,7 +7,7 @@ html {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
-  font-family: "Permanent Marker", cursive;
+  font-family: 'Gaegu', sans-serif;
   scroll-behavior: smooth;
 }
 
